# todo_api

./: .env  Cargo.toml  diesel.toml
migrations/2025-08-14-084017_create_todos/: up.sql
src/: main.rs  schema.rs
src/controllers/: mod.rs
src/models/: mod.rs
src/services/: mod.rs
